Refactor(Various core group components): Adjustments to layout options; changes to link fields and their usages

--- a/src/admin.css
+++ b/src/admin.css
@@ -123,91 +123,91 @@ body > main > div {
   }
 }
 
-.body > [data-background=primary]:not(hr) + [data-background=primary], .editor-styles-wrapper > [data-background=primary]:not(hr) + [data-background=primary], .is-root-container > [data-background=primary]:not(hr) + [data-background=primary], body > [data-background=primary]:not(hr) + [data-background=primary],
-.body > main > [data-background=primary]:not(hr) + [data-background=primary],
-.editor-styles-wrapper > main > [data-background=primary]:not(hr) + [data-background=primary],
-.is-root-container > main > [data-background=primary]:not(hr) + [data-background=primary],
-body > main > [data-background=primary]:not(hr) + [data-background=primary] {
+.body > [data-background=primary]:not(hr):not(span) + [data-background=primary], .editor-styles-wrapper > [data-background=primary]:not(hr):not(span) + [data-background=primary], .is-root-container > [data-background=primary]:not(hr):not(span) + [data-background=primary], body > [data-background=primary]:not(hr):not(span) + [data-background=primary],
+.body > main > [data-background=primary]:not(hr):not(span) + [data-background=primary],
+.editor-styles-wrapper > main > [data-background=primary]:not(hr):not(span) + [data-background=primary],
+.is-root-container > main > [data-background=primary]:not(hr):not(span) + [data-background=primary],
+body > main > [data-background=primary]:not(hr):not(span) + [data-background=primary] {
   padding-block-start: 0;
 }
 
-.body > [data-background=secondary]:not(hr) + [data-background=secondary], .editor-styles-wrapper > [data-background=secondary]:not(hr) + [data-background=secondary], .is-root-container > [data-background=secondary]:not(hr) + [data-background=secondary], body > [data-background=secondary]:not(hr) + [data-background=secondary],
-.body > main > [data-background=secondary]:not(hr) + [data-background=secondary],
-.editor-styles-wrapper > main > [data-background=secondary]:not(hr) + [data-background=secondary],
-.is-root-container > main > [data-background=secondary]:not(hr) + [data-background=secondary],
-body > main > [data-background=secondary]:not(hr) + [data-background=secondary] {
+.body > [data-background=secondary]:not(hr):not(span) + [data-background=secondary], .editor-styles-wrapper > [data-background=secondary]:not(hr):not(span) + [data-background=secondary], .is-root-container > [data-background=secondary]:not(hr):not(span) + [data-background=secondary], body > [data-background=secondary]:not(hr):not(span) + [data-background=secondary],
+.body > main > [data-background=secondary]:not(hr):not(span) + [data-background=secondary],
+.editor-styles-wrapper > main > [data-background=secondary]:not(hr):not(span) + [data-background=secondary],
+.is-root-container > main > [data-background=secondary]:not(hr):not(span) + [data-background=secondary],
+body > main > [data-background=secondary]:not(hr):not(span) + [data-background=secondary] {
   padding-block-start: 0;
 }
 
-.body > [data-background=accent]:not(hr) + [data-background=accent], .editor-styles-wrapper > [data-background=accent]:not(hr) + [data-background=accent], .is-root-container > [data-background=accent]:not(hr) + [data-background=accent], body > [data-background=accent]:not(hr) + [data-background=accent],
-.body > main > [data-background=accent]:not(hr) + [data-background=accent],
-.editor-styles-wrapper > main > [data-background=accent]:not(hr) + [data-background=accent],
-.is-root-container > main > [data-background=accent]:not(hr) + [data-background=accent],
-body > main > [data-background=accent]:not(hr) + [data-background=accent] {
+.body > [data-background=accent]:not(hr):not(span) + [data-background=accent], .editor-styles-wrapper > [data-background=accent]:not(hr):not(span) + [data-background=accent], .is-root-container > [data-background=accent]:not(hr):not(span) + [data-background=accent], body > [data-background=accent]:not(hr):not(span) + [data-background=accent],
+.body > main > [data-background=accent]:not(hr):not(span) + [data-background=accent],
+.editor-styles-wrapper > main > [data-background=accent]:not(hr):not(span) + [data-background=accent],
+.is-root-container > main > [data-background=accent]:not(hr):not(span) + [data-background=accent],
+body > main > [data-background=accent]:not(hr):not(span) + [data-background=accent] {
   padding-block-start: 0;
 }
 
-.body > [data-background=info]:not(hr) + [data-background=info], .editor-styles-wrapper > [data-background=info]:not(hr) + [data-background=info], .is-root-container > [data-background=info]:not(hr) + [data-background=info], body > [data-background=info]:not(hr) + [data-background=info],
-.body > main > [data-background=info]:not(hr) + [data-background=info],
-.editor-styles-wrapper > main > [data-background=info]:not(hr) + [data-background=info],
-.is-root-container > main > [data-background=info]:not(hr) + [data-background=info],
-body > main > [data-background=info]:not(hr) + [data-background=info] {
+.body > [data-background=info]:not(hr):not(span) + [data-background=info], .editor-styles-wrapper > [data-background=info]:not(hr):not(span) + [data-background=info], .is-root-container > [data-background=info]:not(hr):not(span) + [data-background=info], body > [data-background=info]:not(hr):not(span) + [data-background=info],
+.body > main > [data-background=info]:not(hr):not(span) + [data-background=info],
+.editor-styles-wrapper > main > [data-background=info]:not(hr):not(span) + [data-background=info],
+.is-root-container > main > [data-background=info]:not(hr):not(span) + [data-background=info],
+body > main > [data-background=info]:not(hr):not(span) + [data-background=info] {
   padding-block-start: 0;
 }
 
-.body > [data-background=warning]:not(hr) + [data-background=warning], .editor-styles-wrapper > [data-background=warning]:not(hr) + [data-background=warning], .is-root-container > [data-background=warning]:not(hr) + [data-background=warning], body > [data-background=warning]:not(hr) + [data-background=warning],
-.body > main > [data-background=warning]:not(hr) + [data-background=warning],
-.editor-styles-wrapper > main > [data-background=warning]:not(hr) + [data-background=warning],
-.is-root-container > main > [data-background=warning]:not(hr) + [data-background=warning],
-body > main > [data-background=warning]:not(hr) + [data-background=warning] {
+.body > [data-background=warning]:not(hr):not(span) + [data-background=warning], .editor-styles-wrapper > [data-background=warning]:not(hr):not(span) + [data-background=warning], .is-root-container > [data-background=warning]:not(hr):not(span) + [data-background=warning], body > [data-background=warning]:not(hr):not(span) + [data-background=warning],
+.body > main > [data-background=warning]:not(hr):not(span) + [data-background=warning],
+.editor-styles-wrapper > main > [data-background=warning]:not(hr):not(span) + [data-background=warning],
+.is-root-container > main > [data-background=warning]:not(hr):not(span) + [data-background=warning],
+body > main > [data-background=warning]:not(hr):not(span) + [data-background=warning] {
   padding-block-start: 0;
 }
 
-.body > [data-background=success]:not(hr) + [data-background=success], .editor-styles-wrapper > [data-background=success]:not(hr) + [data-background=success], .is-root-container > [data-background=success]:not(hr) + [data-background=success], body > [data-background=success]:not(hr) + [data-background=success],
-.body > main > [data-background=success]:not(hr) + [data-background=success],
-.editor-styles-wrapper > main > [data-background=success]:not(hr) + [data-background=success],
-.is-root-container > main > [data-background=success]:not(hr) + [data-background=success],
-body > main > [data-background=success]:not(hr) + [data-background=success] {
+.body > [data-background=success]:not(hr):not(span) + [data-background=success], .editor-styles-wrapper > [data-background=success]:not(hr):not(span) + [data-background=success], .is-root-container > [data-background=success]:not(hr):not(span) + [data-background=success], body > [data-background=success]:not(hr):not(span) + [data-background=success],
+.body > main > [data-background=success]:not(hr):not(span) + [data-background=success],
+.editor-styles-wrapper > main > [data-background=success]:not(hr):not(span) + [data-background=success],
+.is-root-container > main > [data-background=success]:not(hr):not(span) + [data-background=success],
+body > main > [data-background=success]:not(hr):not(span) + [data-background=success] {
   padding-block-start: 0;
 }
 
-.body > [data-background=error]:not(hr) + [data-background=error], .editor-styles-wrapper > [data-background=error]:not(hr) + [data-background=error], .is-root-container > [data-background=error]:not(hr) + [data-background=error], body > [data-background=error]:not(hr) + [data-background=error],
-.body > main > [data-background=error]:not(hr) + [data-background=error],
-.editor-styles-wrapper > main > [data-background=error]:not(hr) + [data-background=error],
-.is-root-container > main > [data-background=error]:not(hr) + [data-background=error],
-body > main > [data-background=error]:not(hr) + [data-background=error] {
+.body > [data-background=error]:not(hr):not(span) + [data-background=error], .editor-styles-wrapper > [data-background=error]:not(hr):not(span) + [data-background=error], .is-root-container > [data-background=error]:not(hr):not(span) + [data-background=error], body > [data-background=error]:not(hr):not(span) + [data-background=error],
+.body > main > [data-background=error]:not(hr):not(span) + [data-background=error],
+.editor-styles-wrapper > main > [data-background=error]:not(hr):not(span) + [data-background=error],
+.is-root-container > main > [data-background=error]:not(hr):not(span) + [data-background=error],
+body > main > [data-background=error]:not(hr):not(span) + [data-background=error] {
   padding-block-start: 0;
 }
 
-.body > [data-background=light]:not(hr) + [data-background=light], .editor-styles-wrapper > [data-background=light]:not(hr) + [data-background=light], .is-root-container > [data-background=light]:not(hr) + [data-background=light], body > [data-background=light]:not(hr) + [data-background=light],
-.body > main > [data-background=light]:not(hr) + [data-background=light],
-.editor-styles-wrapper > main > [data-background=light]:not(hr) + [data-background=light],
-.is-root-container > main > [data-background=light]:not(hr) + [data-background=light],
-body > main > [data-background=light]:not(hr) + [data-background=light] {
+.body > [data-background=light]:not(hr):not(span) + [data-background=light], .editor-styles-wrapper > [data-background=light]:not(hr):not(span) + [data-background=light], .is-root-container > [data-background=light]:not(hr):not(span) + [data-background=light], body > [data-background=light]:not(hr):not(span) + [data-background=light],
+.body > main > [data-background=light]:not(hr):not(span) + [data-background=light],
+.editor-styles-wrapper > main > [data-background=light]:not(hr):not(span) + [data-background=light],
+.is-root-container > main > [data-background=light]:not(hr):not(span) + [data-background=light],
+body > main > [data-background=light]:not(hr):not(span) + [data-background=light] {
   padding-block-start: 0;
 }
 
-.body > [data-background=dark]:not(hr) + [data-background=dark], .editor-styles-wrapper > [data-background=dark]:not(hr) + [data-background=dark], .is-root-container > [data-background=dark]:not(hr) + [data-background=dark], body > [data-background=dark]:not(hr) + [data-background=dark],
-.body > main > [data-background=dark]:not(hr) + [data-background=dark],
-.editor-styles-wrapper > main > [data-background=dark]:not(hr) + [data-background=dark],
-.is-root-container > main > [data-background=dark]:not(hr) + [data-background=dark],
-body > main > [data-background=dark]:not(hr) + [data-background=dark] {
+.body > [data-background=dark]:not(hr):not(span) + [data-background=dark], .editor-styles-wrapper > [data-background=dark]:not(hr):not(span) + [data-background=dark], .is-root-container > [data-background=dark]:not(hr):not(span) + [data-background=dark], body > [data-background=dark]:not(hr):not(span) + [data-background=dark],
+.body > main > [data-background=dark]:not(hr):not(span) + [data-background=dark],
+.editor-styles-wrapper > main > [data-background=dark]:not(hr):not(span) + [data-background=dark],
+.is-root-container > main > [data-background=dark]:not(hr):not(span) + [data-background=dark],
+body > main > [data-background=dark]:not(hr):not(span) + [data-background=dark] {
   padding-block-start: 0;
 }
 
-.body > [data-background=white]:not(hr) + [data-background=white], .editor-styles-wrapper > [data-background=white]:not(hr) + [data-background=white], .is-root-container > [data-background=white]:not(hr) + [data-background=white], body > [data-background=white]:not(hr) + [data-background=white],
-.body > main > [data-background=white]:not(hr) + [data-background=white],
-.editor-styles-wrapper > main > [data-background=white]:not(hr) + [data-background=white],
-.is-root-container > main > [data-background=white]:not(hr) + [data-background=white],
-body > main > [data-background=white]:not(hr) + [data-background=white] {
+.body > [data-background=white]:not(hr):not(span) + [data-background=white], .editor-styles-wrapper > [data-background=white]:not(hr):not(span) + [data-background=white], .is-root-container > [data-background=white]:not(hr):not(span) + [data-background=white], body > [data-background=white]:not(hr):not(span) + [data-background=white],
+.body > main > [data-background=white]:not(hr):not(span) + [data-background=white],
+.editor-styles-wrapper > main > [data-background=white]:not(hr):not(span) + [data-background=white],
+.is-root-container > main > [data-background=white]:not(hr):not(span) + [data-background=white],
+body > main > [data-background=white]:not(hr):not(span) + [data-background=white] {
   padding-block-start: 0;
 }
 
-.body > :not([data-background]):not(hr) + :not([data-background]), .editor-styles-wrapper > :not([data-background]):not(hr) + :not([data-background]), .is-root-container > :not([data-background]):not(hr) + :not([data-background]), body > :not([data-background]):not(hr) + :not([data-background]),
-.body > main > :not([data-background]):not(hr) + :not([data-background]),
-.editor-styles-wrapper > main > :not([data-background]):not(hr) + :not([data-background]),
-.is-root-container > main > :not([data-background]):not(hr) + :not([data-background]),
-body > main > :not([data-background]):not(hr) + :not([data-background]) {
+.body > :not([data-background]):not(hr):not(span) + :not([data-background]), .editor-styles-wrapper > :not([data-background]):not(hr):not(span) + :not([data-background]), .is-root-container > :not([data-background]):not(hr):not(span) + :not([data-background]), body > :not([data-background]):not(hr):not(span) + :not([data-background]),
+.body > main > :not([data-background]):not(hr):not(span) + :not([data-background]),
+.editor-styles-wrapper > main > :not([data-background]):not(hr):not(span) + :not([data-background]),
+.is-root-container > main > :not([data-background]):not(hr):not(span) + :not([data-background]),
+body > main > :not([data-background]):not(hr):not(span) + :not([data-background]) {
   padding-block-start: 0;
 }
 
@@ -276,6 +276,10 @@ body :where(.editor-styles-wrapper) p {
 .media-toolbar h2, .media-sidebar h2 {
   font-size: unset;
   margin-top: 1rem;
+}
+
+.block-editor-inspector-popover-header__heading {
+  font-size: unset;
 }
 
 /*# sourceMappingURL=admin.css.map */
