--- a/src/block-editor-config.css
+++ b/src/block-editor-config.css
@@ -130,37 +130,56 @@ html :where(.wp-block) {
 
 /**
  * =========== ACF block edit fields (sidebar and overlay) =============================================================
+ * Make ACF fields look more like the core WP block editor fields where they don't already
  */
-.wp-core-ui .acf-block-panel {
+.acf-block-panel {
   display: flex;
   flex-direction: column;
   gap: 8px;
 }
-.wp-core-ui .acf-block-panel .acf-label {
+
+.acf-block-panel .acf-fields .acf-label,
+.editor-sidebar__panel .acf-fields .acf-label {
   text-transform: uppercase;
   font-size: 11px;
   margin: 0;
 }
-.wp-core-ui .acf-block-panel .acf-input select {
+.acf-block-panel .acf-fields .acf-input input[type=text],
+.acf-block-panel .acf-fields .acf-input input[type=number],
+.acf-block-panel .acf-fields .acf-input input[type=email],
+.acf-block-panel .acf-fields .acf-input input[type=url],
+.acf-block-panel .acf-fields .acf-input textarea,
+.acf-block-panel .acf-fields .acf-input select,
+.editor-sidebar__panel .acf-fields .acf-input input[type=text],
+.editor-sidebar__panel .acf-fields .acf-input input[type=number],
+.editor-sidebar__panel .acf-fields .acf-input input[type=email],
+.editor-sidebar__panel .acf-fields .acf-input input[type=url],
+.editor-sidebar__panel .acf-fields .acf-input textarea,
+.editor-sidebar__panel .acf-fields .acf-input select {
   font-size: 13px;
+  min-height: 40px;
+  border-radius: 3px;
+  padding: 0 30px 0 12px;
+}
+.acf-block-panel .acf-fields .acf-input select,
+.editor-sidebar__panel .acf-fields .acf-input select {
   background-size: 13px;
   background-position: right 10px top 55%;
+}
+.acf-block-panel .acf-fields .acf-input .select2-selection,
+.editor-sidebar__panel .acf-fields .acf-input .select2-selection {
   min-height: 40px;
   border-radius: 3px;
   padding: 0 30px 0 12px;
 }
-
-.wp-core-ui .acf-block-panel .select2-selection {
-  min-height: 40px;
-  border-radius: 3px;
-  padding: 0 30px 0 12px;
-}
-.wp-core-ui .acf-block-panel .select2-selection__rendered {
+.acf-block-panel .acf-fields .acf-input .select2-selection__rendered,
+.editor-sidebar__panel .acf-fields .acf-input .select2-selection__rendered {
   height: 100%;
   display: flex !important;
   align-items: center;
 }
-.wp-core-ui .acf-block-panel .select2-selection__arrow {
+.acf-block-panel .acf-fields .acf-input .select2-selection__arrow,
+.editor-sidebar__panel .acf-fields .acf-input .select2-selection__arrow {
   height: 100% !important;
   right: 0.5rem !important;
 }
