--- a/src/block-editor-config.scss
+++ b/src/block-editor-config.scss
@@ -169,45 +169,59 @@ html :where(.wp-block) {
 
 /**
  * =========== ACF block edit fields (sidebar and overlay) =============================================================
+ * Make ACF fields look more like the core WP block editor fields where they don't already
  */
-// Make ACF selects look like WP core native selects
-.wp-core-ui .acf-block-panel {
+.acf-block-panel {
 	display: flex;
 	flex-direction: column;
 	gap: 8px;
-
-	.acf-label {
-		text-transform: uppercase;
-		font-size: 11px;
-		margin: 0;
-	}
-
-	.acf-input select {
-		font-size: 13px;
-		background-size: 13px;
-		background-position: right 10px top 55%;
-		min-height: 40px;
-		border-radius: 3px;
-		padding: 0 30px 0 12px;
-	}
 }
 
-// Make select2 look more like WP core native selects too
-.wp-core-ui .acf-block-panel {
-	.select2-selection {
-		min-height: 40px;
-		border-radius: 3px;
-		padding: 0 30px 0 12px;
+.acf-block-panel,
+.editor-sidebar__panel {
+	.acf-fields {
 
-		&__rendered {
-			height: 100%;
-			display: flex !important;
-			align-items: center;
+		.acf-label {
+			text-transform: uppercase;
+			font-size: 11px;
+			margin: 0;
 		}
 
-		&__arrow {
-			height: 100% !important;
-			right: 0.5rem !important;
+		.acf-input {
+			input[type="text"],
+			input[type="number"],
+			input[type="email"],
+			input[type="url"],
+			textarea,
+			select {
+				font-size: 13px;
+				min-height: 40px;
+				border-radius: 3px;
+				padding: 0 30px 0 12px;
+			}
+
+			select {
+				background-size: 13px;
+				background-position: right 10px top 55%;
+			}
+
+			.select2-selection {
+				min-height: 40px;
+				border-radius: 3px;
+				padding: 0 30px 0 12px;
+
+				&__rendered {
+					height: 100%;
+					display: flex !important;
+					align-items: center;
+				}
+
+				&__arrow {
+					height: 100% !important;
+					right: 0.5rem !important;
+				}
+			}
+
 		}
 	}
 }
