Feat(WP Blocks): Implement BackgroundType, BackgroundOpacity, and ContentMaxWidth attribute controls

--- a/src/block-editor-config.css
+++ b/src/block-editor-config.css
@@ -66,6 +66,7 @@ html :where(.wp-block) {
   display: block;
 }
 
+.components-base-control__label,
 .components-input-control__label {
   display: flex !important;
   align-items: center;
@@ -109,9 +110,18 @@ html :where(.wp-block) {
   height: auto;
 }
 
+.comet-color-controls {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.comet-color-controls .components-base-control {
+  margin-block: 0;
+}
 .comet-color-controls__item {
   width: 100%;
   display: flex;
+  margin-block-end: 0.5rem;
 }
 .comet-color-controls__item .components-dropdown {
   flex-grow: 1;
