Feat(WP Blocks): Create image block and allow for it to be moved up and down to be visually paired with other blocks

--- a/src/block-editor-config.css
+++ b/src/block-editor-config.css
@@ -73,6 +73,16 @@ html :where(.wp-block) {
   gap: 0.25rem;
 }
 
+.components-panel__row {
+  gap: 0.25rem;
+}
+.components-panel__row .components-base-control {
+  margin-block: 0;
+}
+.components-panel__row .components-base-control__field {
+  margin-block: 0;
+}
+
 .components-toggle-group-control {
   transition: border 0.2s ease-in-out;
   border: 1px solid var(--wp-components-color-gray-300, #dee2e6) !important;
