--- a/src/block-editor-config.css
+++ b/src/block-editor-config.css
@@ -1,45 +1,11 @@
-html :where(.wp-block) {
-  margin-top: 0;
-  margin-bottom: 0;
-  max-width: var(--width-contained);
-}
-
-.block-editor-iframe__container {
-  width: 100% !important;
-  max-width: 100% !important;
-}
-
-.block-editor-inserter__panel-title {
-  font-size: 0.75rem !important;
-}
-
-.components-menu-item__button[href*="site-editor.php"] {
-  display: none !important;
-}
-
-.block-list-appender {
-  margin: 0 auto;
-}
-.block-list-appender .block-editor-inserter {
-  width: 100%;
-}
-.block-list-appender__toggle {
-  width: 100%;
-  justify-content: center;
-  border: 1px solid #3c434a;
-}
-
-.acf-block-component .acf-block-fields {
+.block-editor-block-card__title {
   font-family: inherit;
 }
 
-.block-editor-block-list__block a {
-  pointer-events: none !important;
+.ui-sortable-handle {
+  font-family: inherit;
 }
 
-/**
- * =========== Block editor sidebar ====================================================================================
- */
 .components-base-control:has([aria-label="Change vertical alignment"]) {
   padding: 1rem;
   width: max-content;
@@ -59,6 +25,9 @@ html :where(.wp-block) {
   padding-inline: 0;
 }
 
+.components-panel__body-title {
+  font-family: inherit;
+}
 .components-panel__body + .comet-custom-layout-controls {
   display: none;
 }
@@ -83,6 +52,15 @@ html :where(.wp-block) {
   margin-block: 0;
 }
 
+.components-toggle-control__label {
+  display: flex !important;
+  align-items: center;
+  gap: 0.25rem;
+}
+.components-toggle-control__help code {
+  font-size: 0.7rem;
+}
+
 .components-toggle-group-control {
   transition: border 0.2s ease-in-out;
   border: 1px solid var(--wp-components-color-gray-300, #dee2e6) !important;
@@ -96,10 +74,6 @@ html :where(.wp-block) {
 }
 .components-toggle-group-control-option-base:not([aria-checked=true]):not([aria-pressed=true]):hover, .components-toggle-group-control-option-base:not([aria-checked=true]):not([aria-pressed=true]):focus {
   background: #EEE;
-}
-
-.components-toggle-control__help code {
-  font-size: 0.7rem;
 }
 
 .components-resizable-box__container {
@@ -148,6 +122,14 @@ html :where(.wp-block) {
   border-color: var(--wp-components-color-primary, #007cba);
 }
 
+.acf-block-component .acf-block-fields {
+  font-family: inherit;
+}
+
+.block-editor-inspector-popover-header__heading {
+  font-family: inherit;
+}
+
 /**
  * =========== ACF block edit fields (sidebar and overlay) =============================================================
  * Make ACF fields look more like the core WP block editor fields where they don't already
@@ -186,6 +168,14 @@ html :where(.wp-block) {
   background-size: 13px;
   background-position: right 10px top 55%;
 }
+.acf-block-panel .acf-fields .acf-input .button,
+.editor-sidebar__panel .acf-fields .acf-input .button {
+  font-weight: normal;
+}
+.acf-block-panel .acf-fields .acf-input .button:after,
+.editor-sidebar__panel .acf-fields .acf-input .button:after {
+  content: none;
+}
 .acf-block-panel .acf-fields .acf-input .select2-selection,
 .editor-sidebar__panel .acf-fields .acf-input .select2-selection {
   min-height: 40px;
@@ -202,6 +192,115 @@ html :where(.wp-block) {
 .editor-sidebar__panel .acf-fields .acf-input .select2-selection__arrow {
   height: 100% !important;
   right: 0.5rem !important;
+}
+.acf-block-panel .select2-container,
+.editor-sidebar__panel .select2-container {
+  max-width: 100%;
+}
+
+.acf-gallery-side .acf-label {
+  text-transform: none !important;
+  font-size: 12px !important;
+}
+
+.components-modal__header-heading {
+  font-family: inherit;
+}
+
+.wp-core-ui .acf-button {
+  font-weight: inherit;
+}
+.wp-core-ui .acf-button:after {
+  content: none;
+}
+
+.media-frame-title h1 {
+  font-family: inherit;
+}
+
+.media-toolbar h2 {
+  margin-top: 0 !important;
+  font-family: inherit;
+}
+.media-toolbar .media-button:after {
+  content: none;
+}
+
+.media-sidebar h2 {
+  font-family: inherit;
+}
+.media-sidebar .button:after {
+  content: none;
+}
+
+.image-editor .button:after {
+  content: none;
+}
+
+#wp-link-wrap[role=dialog] {
+  padding-block-end: inherit;
+}
+#wp-link-wrap[role=dialog] #link-modal-title {
+  font-family: inherit;
+}
+#wp-link-wrap[role=dialog] p {
+  font-weight: inherit;
+}
+#wp-link-wrap[role=dialog] #link-options div:not(.link-target) label,
+#wp-link-wrap[role=dialog] .link-search-wrapper label {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+#wp-link-wrap[role=dialog] #wp-link-cancel .button {
+  font-weight: inherit;
+}
+#wp-link-wrap[role=dialog] #wp-link-cancel .button:after {
+  content: none;
+}
+
+html :where(.wp-block) {
+  margin-top: 0;
+  margin-bottom: 0;
+  max-width: var(--width-contained);
+}
+
+.editor-document-bar__title h1 {
+  font-family: inherit;
+}
+
+.block-editor-iframe__container {
+  width: 100% !important;
+  max-width: 100% !important;
+}
+
+.block-editor-inserter__panel-title {
+  font-size: 0.75rem !important;
+  font-family: inherit;
+}
+
+.block-editor-block-types-list__item-title span {
+  hyphens: none;
+}
+
+.components-menu-item__button[href*="site-editor.php"] {
+  display: none !important;
+}
+
+.block-list-appender {
+  margin: 0 auto;
+}
+.block-list-appender .block-editor-inserter {
+  width: 100%;
+}
+.block-list-appender__toggle {
+  width: 100%;
+  justify-content: center;
+  border: 1px solid #3c434a;
+}
+
+.block-editor-block-list__block a {
+  pointer-events: none !important;
 }
 
 /*# sourceMappingURL=block-editor-config.css.map */
