--- a/src/editor/_core-styles/_acf-block-edit.scss
+++ b/src/editor/_core-styles/_acf-block-edit.scss
@@ -10,8 +10,8 @@
 
 .acf-block-panel,
 .editor-sidebar__panel {
-	.acf-fields {
 
+	.acf-fields {
 		.acf-label {
 			text-transform: uppercase;
 			font-size: 11px;
@@ -36,6 +36,14 @@
 				background-position: right 10px top 55%;
 			}
 
+			.button {
+				font-weight: normal;
+
+				&:after {
+					content: none;
+				}
+			}
+
 			.select2-selection {
 				min-height: 40px;
 				border-radius: 3px;
@@ -55,6 +63,17 @@
 
 		}
 	}
+
+	.select2-container {
+		max-width: 100%;
+	}
+}
+
+.acf-gallery-side {
+	.acf-label {
+		text-transform: none !important;
+		font-size: 12px !important;
+	}
 }
 
 .components-modal__header-heading {
@@ -68,11 +87,5 @@
 		&:after {
 			content: none;
 		}
-	}
-}
-
-.media-frame-title {
-	h1 {
-		font-family: inherit;
 	}
 }
